@@ -3,6 +3,9 @@ Changes in stable release 2.4.16 (not released yet)
 * The PageOnly option in FvwmTaskBar now works after a desk change
   too.
 
+* Fixed a possible core dump when more than 256 windows are on
+  the desktop.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.15 (24-Jan-2003)
