@@ -1,3 +1,9 @@
+2003-02-13  olicha  <olivier.chapuis@free.fr>
+
+	* fvwm/gnome.c (GNOME_SetClientList):
+	Applied David Fries patch which fixes a possible crash with more
+	than 256 windows
+
 2003-02-09  Dan Espen  <dane@mk.telcordia.com>
 
 	* fvwm/fvwm2.1: * Update %space/%tab description in menu.
